--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "autoprefixer": "^10.4.7",
+    "commitizen": "^4.2.4",
     "cssnano": "^5.1.12",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^8.19.0",
