--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "dev:test": "vite --mode test",
+    "dev:production": "vite --mode production",
+    "build": "vite build",
+    "build:test": "vite build --mode test",
+    "build:production": "vite build --mode production",
     "preview": "vite preview",
     "prepare": "husky install",
     "lint-staged": "lint-staged",
