--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     ]
   },
   "dependencies": {
+    "crypto-js": "^4.1.1",
+    "element-plus": "^2.2.9",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.15",
     "vue": "^3.2.25",
     "vue-router": "4"
@@ -27,6 +30,8 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@types/crypto-js": "^4.1.1",
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "@vitejs/plugin-vue": "^2.3.3",
@@ -47,6 +52,8 @@
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.9.2",
+    "unplugin-vue-components": "^0.21.1",
     "vite": "^2.9.9",
     "vue-eslint-parser": "^9.0.3",
     "vue-tsc": "^0.34.7"
