--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "commit": "cz"
   },
   "lint-staged": {
-    "src/**/*.{ts,js,vue,scss}": [
+    "src/**/*.{ts,js,vue}": [
       "eslint --fix"
     ]
   },
