--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "element-plus": "^2.2.9",
     "nprogress": "^0.2.0",
