--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-vue": "^9.2.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
+    "mockjs": "^1.1.0",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "sass": "^1.53.0",
@@ -56,6 +57,7 @@
     "unplugin-auto-import": "^0.9.2",
     "unplugin-vue-components": "^0.21.1",
     "vite": "^2.9.9",
+    "vite-plugin-mock": "^2.9.6",
     "vue-eslint-parser": "^9.0.3",
     "vue-tsc": "^0.34.7"
   },
