--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     ]
   },
   "dependencies": {
+    "@better-scroll/core": "^2.4.2",
+    "@better-scroll/scroll-bar": "^2.4.2",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "element-plus": "^2.2.9",
