feat: 角色管理页面

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "commit": "cz"
   },
   "lint-staged": {
-    "src/**/*.{ts,js,vue}": [
+    "{src/**/*.{ts,js,vue}, mock/**/*.ts, ./vite.config.ts}": [
       "eslint --fix"
     ]
   },
