feat: unplugin-vue-define-options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "skipLibCheck": true,
     "paths": {
       "@/*": ["./src/*"],
-    }
+    },
+    "types": ["unplugin-vue-define-options"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","mock/**/*.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
