--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.9.2",
     "unplugin-vue-components": "^0.21.1",
+    "unplugin-vue-define-options": "^0.6.2",
     "vite": "^2.9.9",
     "vite-plugin-mock": "^2.9.6",
     "vue-eslint-parser": "^9.0.3",
