--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@better-scroll/core": "^2.4.2",
     "@better-scroll/scroll-bar": "^2.4.2",
+    "@element-plus/icons-vue": "^2.0.6",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "element-plus": "^2.2.9",
